fix(client): mobile scale and docs link

--- a/client/src/app.html
+++ b/client/src/app.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%sveltekit.assets%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Paste then AC</title>
     <meta name="description" content="更适合算竞宝宝体质的自由剪贴板">
     <meta name="keywords" content="pastebin,剪贴板,algorithm,programming contest,tools">
